--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '3.8'
 services:
   frontend:
-    build: Dockerfile_frontend
+    build: 
+      context: .
+      dockerfile: Dockerfile_frontend
     ports:
       - 8501:8501
     depends_on:
@@ -14,7 +16,9 @@ services:
     container_name: frontend
     
   backend:
-    build: Dockerfile_backend
+    build: 
+      context: .
+      dockerfile: Dockerfile_backend
     ports:
       - 8000:8000
     volumes:
