--- a/Dockerfile_backend
+++ b/Dockerfile_backend
@@ -17,6 +17,6 @@ EXPOSE 8000
 
 HEALTHCHECK CMD curl --fail http://localhost:8501/_stcore/health
 
-ENTRYPOINT ["uvicorn", "run", "myapp.py"]
+ENTRYPOINT ["uvicorn", "run"]
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000" ,"--reload"]
+CMD ["uvicorn", "main : app", "--host", "0.0.0.0", "--port", "8000" ,"--reload"]
