--- a/Dockerfile_backend
+++ b/Dockerfile_backend
@@ -19,4 +19,4 @@ HEALTHCHECK CMD curl --fail http://localhost:8501/_stcore/health
 
 ENTRYPOINT ["uvicorn", "run"]
 
-CMD ["uvicorn", "main : app", "--host", "0.0.0.0", "--port", "8000" ,"--reload"]
+CMD ["main : app", "--host", "0.0.0.0", "--port", "8000" ,"--reload"]
