--- a/Dockerfile_backend
+++ b/Dockerfile_backend
@@ -17,6 +17,6 @@ EXPOSE 8000
 
 HEALTHCHECK CMD curl --fail http://localhost:8501/_stcore/health
 
-ENTRYPOINT ["uvicorn", "run"]
+# ENTRYPOINT ["uvicorn", "run"]
 
-CMD ["myapp.py", "--host", "0.0.0.0", "--port", "8000" ,"--reload"]
+CMD ["python", "./myapp.py"]
