--- a/Dockerfile_backend
+++ b/Dockerfile_backend
@@ -17,4 +17,4 @@ EXPOSE 8000
 
 HEALTHCHECK CMD curl --fail http://localhost:8501/_stcore/health
 
-CMD ["python", "myapp.py"]
+CMD ["uvicorn", "myapp:app", "--host", "0.0.0.0", "--port", "8000" ,"--reload"]
