update structure and add schemas

--- a/frontend/.streamlit/secrets.toml
+++ b/frontend/.streamlit/secrets.toml
@@ -1,2 +1,2 @@
-PREDICT_ENDPOINT="http://localhost:8080/predict_price"
-FORECAST_ENDPOINT="http://localhost:8080/get_forecast"
+PREDICT_ENDPOINT="http://127.0.0.1:8080/api/predictor/predict_price"
+FORECAST_ENDPOINT="http://127.0.0.1:8080/api/predictor/get_forecast"
