--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DATASET_PATH="backend\\df_ts_rolled_resampled_15min.csv"
 MODEL_PATH="backend\\lreg_taxi.pkl"
+DATABASE_URL="postgresql+psycopg2://postgres:robertchase1@localhost/taxi_app"
