--- a/frontend/.streamlit/secrets.toml
+++ b/frontend/.streamlit/secrets.toml
@@ -1,7 +1,7 @@
-PREDICT_ENDPOINT="http://127.0.0.1:8080/api/predictor/predict_price"
-FORECAST_ENDPOINT="http://127.0.0.1:8080/api/predictor/get_forecast"
-LOGIN_ENDPOINT="http://127.0.0.1:8080/api/users/login"
-CHANGE_USER_INFO_ENDPOINT="http://127.0.0.1:8080/api/users/change_user_info"
-DEL_USER_ENDPOINT="http://127.0.0.1:8080/api/users/del_user"
-GET_USER_TRIPS_ENDPOINT="http://127.0.0.1:8080/api/trips/get_trips_by_user"
-CREATE_USER_ENDPOINT="http://127.0.0.1:8080/api/users/create_user"
+PREDICT_ENDPOINT="http://backend:8080/api/predictor/predict_price"    
+FORECAST_ENDPOINT="http://backend:8080/api/predictor/get_forecast"
+LOGIN_ENDPOINT="http://backend:8080/api/users/login"
+CHANGE_USER_INFO_ENDPOINT="http://backend:8080/api/users/change_user_info"
+DEL_USER_ENDPOINT="http://backend:8080/api/users/del_user"
+GET_USER_TRIPS_ENDPOINT="http://backend:8080/api/trips/get_trips_by_user"
+CREATE_USER_ENDPOINT="http://backend:8080/api/users/create_user"
