--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,23 @@
-FROM python:3.11
+FROM python:3.10      
 
-COPY requirements.txt app/requirements.txt
-WORKDIR /app
+WORKDIR /frontend
 
-RUN pip install -r requirements.txt
-COPY . /app
+RUN pip install fastapi uvicorn setuptools 
+
+COPY requirements.txt ./
+
+RUN pip install -r requirements.txt --ignore-installed
+
+COPY . .
+
+# COPY ./.streamlit ./frontend/.streamlit
+
+# COPY ./pages ./frontend/pages
+
+# COPY Hello.py ./
+
+# COPY taxi_logo.png ./
 
 EXPOSE 8501
 
-ENTRYPOINT ["streamlit","run"]
-
-CMD ["taxi_app.py"]
+CMD ["streamlit", "run", "Hello.py"]
